--- a/profile/templates/profile_navbar/profile_navbar.html
+++ b/profile/templates/profile_navbar/profile_navbar.html
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'tiles:tile_create_view' %}">Create Tile</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'tiles:tile_list_view' %}">My Tiles</a>
+          </li>
 
         </ul>
       </div>
