--- a/static/tiles/tile_view.css
+++ b/static/tiles/tile_view.css
@@ -1,13 +1,12 @@
+html,body {
+    margin: 0;
+    padding: 0;
+}
 
-.block-settings {
+.block-settings, .subtiles{
     box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;
     display: inline-block;
     margin: 10px;
     padding: 10px;
     background-color: white;
-}
-
-html,body {
-    margin: 0;
-    padding: 0;
 }
