--- a/templates/tiles/tile_view.html
+++ b/templates/tiles/tile_view.html
@@ -29,4 +29,6 @@
             </div>
         {% endfor %}
     </div>
+
+    <div class='personal-filter'>{{ personal_formset }}</div>
 {% endblock content %}
