--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -3,15 +3,14 @@
 
 {% block head_links %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'home/home.css' %}">
-    <link rel="stylesheet" href="{% static 'tiles/base_tile_details.css'%}">
+    <link rel="stylesheet" href="{% static 'home/home.css' %}"/>
+    <link rel="stylesheet" href="{% static 'tiles/base_tile_details.css' %}"/>
 {% endblock head_links %}
 
 {% block head_scripts %}
     {{ block.super }}
     <script src="{% static 'home/home.js' %}"> </script>
 {% endblock head_scripts %}
-
 
 {% block content %}
 
