--- a/templates/map/tile_map.html
+++ b/templates/map/tile_map.html
@@ -13,6 +13,8 @@
 
       <button class="accordion-button" id="tile-0" type="button" data-bs-toggle="collapse" data-bs-target="#RootZero" aria-expanded="true" aria-controls="RootZero">
         Root
+        &nbsp;
+        <a href="{% url 'tiles:tile_detail_view' 0 %}"><img height="20" width="20" src="{% static 'map/icon/green-play-button-icon.svg' %}" alt=""/></a>
       </button>
 
       <div id="RootZero" class="accordion-collapse collapse" data-bs-parent="#TileMapMainContainer">
