--- a/templates/navbar/navbar_base.html
+++ b/templates/navbar/navbar_base.html
@@ -3,7 +3,7 @@
 
 {% block head_links %}
     {{ block.super }}
-    <link rel="stylesheet" href="{% static 'navbar/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'navbar/navbar.css' %}"/>
 {% endblock head_links %}
 
 {% block head_scripts %}
