--- a/static/questions/question_form.css
+++ b/static/questions/question_form.css
@@ -6,7 +6,10 @@ label{
     display: block;
 }
 
-#form-container{
+#form-container {
     margin: 0 44em;
 }
 
+.choice-form {
+    display: flex;
+}
