--- a/templates/writing/writing.html
+++ b/templates/writing/writing.html
@@ -1,4 +1,4 @@
-{% extends "navbar/navbar.html" %}
+{% extends "navbar/writing_navbar.html" %}
 {% load static %}
 
 {% block head_links %}
@@ -16,7 +16,6 @@
         <form action="" method='post'>
         {% csrf_token %}
         {{ form.as_p }}
-        <br/>
         <input type="submit" value="Submit"/>
     </form></div>
 </div>
