--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -11,7 +11,7 @@
 
     {% block navbar_content %}
     
-        <div class="nav-bar search-box">
+        <div class="nav-bar search-box navbar-content">
             <input type="text" class="nav-bar tbox" placeholder="Search"/>
             <span> &nbsp; </span>
             <button class="nav-bar-srch-btn"> Search</button>
