--- a/static/tiles/base_tile_details.css
+++ b/static/tiles/base_tile_details.css
@@ -5,7 +5,7 @@
     border-radius: 3px;
     position: relative;
     cursor: pointer;
-    background-color: rgb(240, 235, 230);
+    background: url("/static/tiles/dot-grid.webp");
     padding: 10px;
     max-width: 350px;
 
