--- a/templates/tiles/writerequestdata_list.html
+++ b/templates/tiles/writerequestdata_list.html
@@ -4,10 +4,11 @@
 {{ block.super }}
 <ul>
     {% for wrd in object_list %}
-        <li>{{ wrd.id }} | 
-            {{ wrd.tile_created_from.tile_headline }}
-        | Total {{ wrd.block_total_questions }} questions | 
-        {{ wrd.created_at }}
+        <li>{{ wrd.id }} 
+        | {{ wrd.tile_created_from.tile_headline }}
+        | Total {{ wrd.block_total_questions }} questions 
+        | {{ wrd.created_at }} 
+        | {{ wrd.get_block_mode_display }}
         {% if wrd.finished %}
             | <a href="{% url 'writing:resume_block' wrd.id %}"> review </a>
         {% else %}
