--- a/templates/writing/writing.html
+++ b/templates/writing/writing.html
@@ -13,7 +13,7 @@
 
 <div class="answers_flex">
     <div class="answers_box">
-        <form action="" method='post'>
+        <form action="" id="hypothetical" method='post'>
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit"/>
