--- a/static/tiles/tile_view.css
+++ b/static/tiles/tile_view.css
@@ -3,7 +3,7 @@ html,body {
     padding: 0;
 }
 
-.block-settings, .subtiles, .personal-filter{
+.block-settings,  .personal-filter{
     box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;
     display: inline-block;
     margin: 10px;
@@ -24,3 +24,24 @@ section {
     flex-grow: 1;
     overflow-y: auto;
   }
+
+#fieldset--override {
+    /* border-width: 2px;
+    border-style: groove;
+    border-color: rgb(192, 192, 192);
+    border-image: initial; */
+    border: revert;
+    min-width: revert;
+    padding: revert;
+    margin: revert;
+
+}
+
+#legend--override {
+    float: revert;
+    width: revert;
+    padding: revert;
+    margin-bottom: revert;
+    font-size: revert;
+    line-height: revert;
+}
