--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -42,4 +42,7 @@
             <a class="flex--item s-link fs-caption" href="{% url 'password_reset' %}">Forgot password?</a>
         </div>
     </form>
+    <button class="btn btn-primary mb-2">
+        <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
+    </button>
 {% endblock content %}
