--- a/static/tiles/base_tile_details.css
+++ b/static/tiles/base_tile_details.css
@@ -7,6 +7,7 @@
     cursor: pointer;
     background: url("/static/tiles/dot-grid.webp");
     padding: 10px;
+    padding-top: 25px;
     max-width: 350px;
 
 }
@@ -36,18 +37,18 @@
     align-items: center;
 }
 
-img{
+/* img{
     width: 100%; 
     height: auto; 
     max-height: 100%;
     object-fit: cover;
     border-radius: 1px;
     position: absolute;
-}
+} */
 
 .tile_type{
     position: absolute;
-    bottom: 2px;
+    bottom: 17px;
     left: 2px;
     background-color: white;
     border-radius: 1px;
@@ -58,18 +59,19 @@ img{
 
 .tile_total_questions {
     position: absolute;
-    bottom: 2px;
+    bottom: 5px;
     right: 2px;
     background-color: white;
     border-radius: 1px;
     padding: 1px;
     font-family: monospace;
-    max-height: 1.2rem;
+    /* max-height: 1.2rem; */
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 .bubble_container {
     position: relative;
-    height: 1.2rem;
+    /* height: 1.2rem; */
 }
 
 .tile_title {
