--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -19,11 +19,15 @@
 
     {% endblock navbar_content %}
 
-    <div>
+    <svg aria-hidden="true" class="svg-icon iconInbox" width="20" height="18" viewBox="0 0 20 18">
+        <path d="M4.63 1h10.56a2 2 0 0 1 1.94 1.35L20 10.79V15a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-4.21l2.78-8.44c.25-.8 1-1.36 1.85-1.35Zm8.28 12 2-2h2.95l-2.44-7.32a1 1 0 0 0-.95-.68H5.35a1 1 0 0 0-.95.68L1.96 11h2.95l2 2h6Z"/></svg>
+
+    {% comment %} <div>
         <a href="{% url 'map' %}">Map</a>   
-    </div>
+    </div> {% endcomment %}
 
     <a href="{% url 'createQuestion' %}" target="_blank" rel="noopener noreferrer">Create</a>
+    
     {% comment %} <button onclick="window.location.href={% url 'createQuestion' %};">
         Create</button> {% endcomment %}
 
