--- a/static/writing/writing.css
+++ b/static/writing/writing.css
@@ -2,8 +2,8 @@
 .question_body{
     display: flex;
     justify-content: center;
-    margin: 0 23em;
-    margin-top: 5em;
+    margin: 0 23vw;
+    margin-top: 2vw;
 }
 
 .answers_box{
@@ -11,6 +11,7 @@
     padding: 5px 15px;
     /* box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; */
     box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+    margin-bottom: 2vw;
 }
 
 .answers_flex{
@@ -26,4 +27,8 @@
 
 .correct_green{
     box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 2px inset, rgba(1, 139, 8, 0.966) 0px 0px 0px 2px;
+}
+
+img{
+    max-height: 90vh;
 }
