--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -16,8 +16,11 @@
 {% block content %}
 
     <div class="content-container">
-        <div class="left-sidebar">
-             {{ sidebar }} </div>
+        <div class="relative-sidebar">
+            <div class="left-sidebar">
+                 {{ sidebar }} 
+            </div>
+        </div>
         <div class="grid-container">
             {{ tiles }}
         </div>
