--- a/templates/map/home_map.html
+++ b/templates/map/home_map.html
@@ -6,7 +6,7 @@
 
       {% comment %} https://stackoverflow.com/questions/27560661/button-with-link-inside-bootstrap-accordion-table {% endcomment %}
       <button class="accordion-button" id="tile-0" type="button" data-bs-toggle="collapse" data-bs-target="#RootZero" aria-expanded="true" aria-controls="RootZero">
-        Root
+        Menu
         &nbsp;
         <a href="{% url 'tiles:tile_detail_view' 0 %}" class="map-open-link"><img height="20" width="20" src="{% static 'map/icon/green-play-button-icon.svg' %}" alt=""/></a>
         &nbsp;
