--- a/templates/questions/question_form.html
+++ b/templates/questions/question_form.html
@@ -4,6 +4,7 @@
 {% block head_links %}
     {{ block.super }}
     <link rel="stylesheet" href="{% static 'questions/question_form.css' %}"/>
+    {{ form.media }}
 {% endblock head_links %}
 
 {% block content %}
