--- a/templates/writing/reviewing.html
+++ b/templates/writing/reviewing.html
@@ -30,7 +30,7 @@
 </div>
 
 <div class="explanation question_body">
-{{ object.question_explanation | safe }}
+{{ object.answer_to.question_explanation | safe }}
 </div>
 
 {% endblock content %}
