--- a/static/registration/login.css
+++ b/static/registration/login.css
@@ -1,6 +1,9 @@
 
 .login-form{
-    margin: 1em 44em;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* CSS */
@@ -49,6 +52,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    max-width: 150ch;
 }
 
 .flex--item{
@@ -76,4 +80,12 @@
     cursor: pointer;
     text-decoration: none;
     user-select: auto;
+}
+
+#div_id_username{
+  max-width: 150ch;
+}
+
+#div_id_password{
+  max-width: 150ch;
 }
