--- a/templates/tiles/tile_create.html
+++ b/templates/tiles/tile_create.html
@@ -1,14 +1,13 @@
-{% extends 'navbar/navbar.html' %}
+{% extends "navbar/navbar.html" %}
 {% load static %}
 
-
 {% block content %}
-
-    <div class='block-settings'>
-        <form action='' method="post">
-            {% csrf_token%}
+    <div class="block-settings">
+        <form method="post">
+            {% csrf_token %}
             {{ form.as_p }}
-        <input type="submit" class='btn btn-primary' value='Submit'>
+        <input type="submit" class="btn btn-primary" value="Submit">
         <input type="hidden" name='text' value=" {{ next }}">
+        </form>
     </div>
 {% endblock content %}
