--- a/static/writing/writing.css
+++ b/static/writing/writing.css
@@ -32,3 +32,13 @@
 img{
     max-height: 90vh;
 }
+
+#DarkModeSwitchCheckDefault{
+    float: right;
+    margin-top: 0;
+}
+
+.dark_mode{
+    background-color: #121212;
+    color: white;
+}
