--- a/templates/navbar/navbar.html
+++ b/templates/navbar/navbar.html
@@ -1,4 +1,5 @@
 {% extends "navbar/navbar_base.html" %}
+{% load static %}
 
 {% block homenavbar %}
 
@@ -31,13 +32,13 @@
     {% comment %} <button onclick="window.location.href={% url 'createQuestion' %};">
         Create</button> {% endcomment %}
 
-    <div class="nav-bar balance">
+    {% comment %} <div class="nav-bar balance">
         {% if balance %} 
             {{ balance }}K
         {% else %}
             0.0 K
         {% endif %}
-    </div>
+    </div> {% endcomment %}
 
     <div class="profile-corner">
         {% if user.is_authenticated %}
@@ -47,6 +48,13 @@
             </button>
             <ul class="dropdown-menu">
                 <li><a href="{% url 'user_update' user.pk %}" class="dropdown-item"> Profile</a></li>
+
+                <li>
+                    <div class="form-check form-switch dropdown-item">
+                        <label class="form-check-label" for="DarkModeSwitchCheckDefault">Dark Mode </label>
+                        <input class="form-check-input" type="checkbox" role="switch" id="DarkModeSwitchCheckDefault">
+                      </div>
+                </li>
                 <li><a href="{% url 'logout' %}" class="dropdown-item"> Log out</a></li>
             </ul>
 
@@ -59,3 +67,7 @@
 </nav>
 {% endblock homenavbar %}
 
+{% block body_scripts %}
+    {{ block.super }}
+    <script src="{% static 'navbar/navbar.js' %}"> </script>
+{% endblock body_scripts %}
